@@ -116,6 +116,7 @@ test: test00-knight-posix-binary \
 	test24-armv7l-binary \
 	test25-armv7l-binary \
 	test26-armv7l-binary \
+	test99-armv7l-binary \
 	test00-x86-binary \
 	test01-x86-binary \
 	test02-x86-binary \
@@ -308,6 +309,9 @@ test25-armv7l-binary: M2-Planet | results
 
 test26-armv7l-binary: M2-Planet | results
 	test/test26/hello-armv7l.sh
+
+test99-armv7l-binary: M2-Planet | results
+	test/test99/hello-armv7l.sh
 
 test00-x86-binary: M2-Planet | results
 	test/test00/hello-x86.sh
